# ssao

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/shaders/: ao_sample_frag.glsl  ao_sample_vert.glsl  blur_frag.glsl  frag.glsl  geom.glsl  global.glsl  vert.glsl
src/: CMakeLists.txt  imgui_impl.cpp  imgui_impl.h  main.cpp
